Remplacement des anciens liens ademe.fr par les bons permalinks GitHub Pages

--- a/docs/_posts/2016-10-20-lynk-co.md
+++ b/docs/_posts/2016-10-20-lynk-co.md
@@ -14,7 +14,7 @@ layout: post
 
 	<li style="text-align: justify;"><strong><a href="http://www.lynkco.com/en/car-and.html" target="_blank">Think AirBnb for Car</a></strong>. Les choses sont maintenant très claires. Les constructeurs chinois arrivent avec une vision de la mobilité allégée, connectée, évolutive.</li>
 
-	<li style="text-align: justify;">"Nous sommes un constructeur automobile qui n'essaye pas de vous vendre une voiture". Enfin. C'était une <a href="http://transportsdufutur.ademe.fr/2013/09/nissan-et-daimler-sengagent-a-commercialiser-des-voitures-autonomes-en-2020-risques-et-opportunites.html?hlst=patagonia" target="_blank"><strong>évidence</strong></a>.</li>
+	<li style="text-align: justify;">"Nous sommes un constructeur automobile qui n'essaye pas de vous vendre une voiture". Enfin. C'était une <a href="https://gabrielplassat.github.io/transportsdufutur/2013/09/nissan-et-daimler-sengagent-a-commercialiser-des-voitures-autonomes-en-2020-risques-et-opportunites.html?hlst=patagonia" target="_blank"><strong>évidence</strong></a>.</li>
 
 	<li class="scroll-item">Think of it like <strong>kickstarter</strong>. Sky’s the limit. You’ve got an idea, you share it. Then we develop it. With you.</li>
 
